# gilgates-api

./: Dockerfile.server  Dockerfile.worker  alembic.ini  docker-compose.debug.yml  docker-compose.yml  docker.env  pyproject.toml
gilgates_api/: __init__.py  config.py  context.py  dao_factory.py  database.py  deps.py  enums.py  logger.py  model.py  server.py  settings.py  worker.py
gilgates_api/api/: __init__.py  auth.py  customer.py  employee.py  login.py  signup.py  user.py
gilgates_api/dao/: __init__.py  user.py
gilgates_api/helpers/: config_helpers.py  formatters.py  validators.py
gilgates_api/model/: __init__.py  address.py  role.py  user.py
gilgates_api/services/: postmark.py
gilgates_api/services/auth/: __init__.py  token.py
gilgates_api/services/user/: __init__.py  new_user.py
gilgates_api/tasks/: __init__.py  email.py  emails.py
migrations/: env.py
migrations/versions/: 778a894938d5_init.py
tests/: conftest.py  test_gilgates_api.py
tests/api/: test_login.py  test_signup.py  test_user.py
tests/dao/: test_user_dao.py
tests/services/: test_auth.py
