[tool.poetry]
name = "gilgates-api"
version = "2.0.0"
description = ""
authors = ["Pedro Antonio <pedroantonio@codetta.tech>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
celery = "^5.2.7"
environs = "^9.5.0"
aiosqlite = "^0.18.0"
pydantic = {extras = ["email"], version = "^1.10.4"}
passlib = "^1.7.4"
PyJWT = "^2.6.0"
python-multipart = "^0.0.5"
sqlmodel = "^0.0.8"
postmarker = "^1.0"
redis = "^4.4.2"

[tool.poetry.dev-dependencies]
pytest = "7.2.1"
black = "^22.12.0"
anyio = "^3.6.2"
pytest-asyncio = "^0.20.3"
httpx = "^0.23.3"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
